--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -6,7 +6,21 @@ Runs the @code{dat} module test suite.
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
+@deftypefun {int} {lw6dat_warehouse_init} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{local_node_id})
+@var{warehouse}:  object to initialize 
+
+@var{local_node_id}:  id of local node, used to handle local messages
+
+
+Initializes a warehouse object. Won't free anything, will just
+erase values if they're here
+
+@strong{Return value:}  new object, allocated dynamically
+@end deftypefun
+
 @deftypefun {lw6dat_warehouse_t *} {lw6dat_warehouse_new} (u_int64_t @var{local_node_id})
+@var{local_node_id}:  id of local node, used to handle local messages
+
 
 Creates a new warehouse object.
 
@@ -34,7 +48,7 @@ and resetting the current seq_id to the minimal/start value.
 @var{warehouse}:  the object to purge
 
 Purges a warehouse object. Purges means emptying everything
-but keeping the current seq_id unchanged.
+but keeping the current seq_id and the nodes list unchanged.
 
 @strong{Return value:}  none.
 @end deftypefun
