--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -77,6 +77,29 @@ Returns the latest (highest) serial number given for local node.
 @strong{Return value:}  integer, latest serial number
 @end deftypefun
 
+@deftypefun {int} {lw6dat_warehouse_register_node} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{node_id}, int @var{serial_0})
+@var{warehouse}:  object to update
+
+@var{node_id}:  id of node to register
+
+@var{serial_0}:  serial number of first message 
+
+Registers a node, in practice this is automatically done when receiving
+a data message but it might be interesting to do it elsewhere and force it.
+
+@strong{Return value:}  the stack index of the registered node, <0 is invalid.
+@end deftypefun
+
+@deftypefun {int} {lw6dat_warehouse_is_node_registered} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{node_id})
+@var{warehouse}:  object to update
+
+@var{node_id}:  id of node to register
+
+Tells wether a node is registered or not in our list.
+
+@strong{Return value:}  1 if registered, 0 if not.
+@end deftypefun
+
 @deftypefun {int} {lw6dat_warehouse_put_atom_str} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{logical_from}, const char * @var{full_str})
 @var{warehouse}:  warehouse object to use
 
