--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -36,18 +36,21 @@ Generate a BAR command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {char *} {lw6msg_cmd_generate_join} (lw6nod_info_t * @var{info}, int64_t @var{seq})
+@deftypefun {char *} {lw6msg_cmd_generate_join} (lw6nod_info_t * @var{info}, int64_t @var{seq}, int @var{serial})
 @var{info}:  the node info to use
 
 @var{seq}:  the current seq
+
+@var{serial}:  the serial message number to start with
 
 Generate a JOIN command. The seq parameter, if 0, means we
 want to request to join to a server. Wether this is a real
 server or a physical client acting as a server is out of
 consideration, 0 means request to join, period. If greater
 than 0, means we are accepting a client, and then the value
-is our current seq, which the client mmust use to calibrate
-its own data.
+is our current seq, which the client must use to calibrate
+its own data. The serial number is here to avoid querying
+messages before the join and keep the serie complete.
 
 @strong{Return value:}  newly allocated string.
 @end deftypefun
@@ -124,8 +127,12 @@ Analyzes a BAR message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_join} (lw6nod_info_t ** @var{info}, int64_t * @var{seq}, const char * @var{msg})
+@deftypefun {int} {lw6msg_cmd_analyse_join} (lw6nod_info_t ** @var{info}, int64_t * @var{seq}, int * @var{serial}, const char * @var{msg})
 @var{info}:  will contain (remote) node info on success
+
+@var{seq}:  sequence used to initialize communication
+
+@var{serial}:  serial used to initialize communication
 
 @var{msg}:  the message to analyse
 
