--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-02 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added DATA keyword to all atoms, which are now sent/received OK.
+
 2012-05-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Various bug-fixes concerning p2p message exchange (need more).
