--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -122,7 +122,9 @@ atoms. So this calculation is not within the functions themselves
 but can be cached by using this function. Just call it and
 after you might query the object for reference and draft info.
 
-@strong{Return value:}  1 on success, 0 on failure.
+@strong{Return value:}  1 if some valid informations were found, else 0,
+which means no interesting (complete) atoms where found, and
+there's probably nothing to do yet.
 @end deftypefun
 
 @deftypefun {int} {lw6dat_warehouse_put_local_msg} (lw6dat_warehouse_t * @var{warehouse}, const char * @var{msg})
