--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-07 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Z compression for long messages, draft pump fixed.
+
 2012-05-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixing warehouse message pump.
