--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -81,6 +81,22 @@ only in long multipart messages.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
+@deftypefun {char *} {lw6msg_cmd_generate_miss} (u_int64_t @var{id_from}, u_int64_t @var{id_to}, int @var{serial_min}, int @var{serial_max})
+@var{id_from}:  id of the node which didn't send data correctly
+
+@var{id_to}:  id of the node which didn't receive data correctly
+
+@var{serial_min}:  minimum serial number of unsent/unreceived messages
+
+@var{serial_max}:  maximum serial number of unsent/unreceived messages
+
+Generate a MISS command. This will request anyone who has the
+messages mentionned in stock to resent them to the one who's
+asking for them.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
 @deftypefun {int} {lw6msg_cmd_analyse_hello} (lw6nod_info_t ** @var{info}, const char * @var{msg})
 @var{info}:  will contain (remote) node info on success
 
@@ -162,7 +178,25 @@ Analyzes a GOODBYE message.
 
 @var{ker_msg}:  will contain actual message on success
 
+@var{msg}:  the message to analyze
+
 Analyzes a DATA message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6msg_cmd_analyse_miss} (u_int64_t * @var{id_from}, u_int64_t * @var{id_to}, int * @var{serial_min}, int * @var{serial_max}, const char * @var{msg})
+@var{id_from}:  will contain the id of the node which didn't send data correctly
+
+@var{id_to}:  will contain the id of the node which didn't receive data correctly
+
+@var{serial_min}:  will contain the minimum serial number of unsent/unreceived messages
+
+@var{serial_max}:  will contain the maximum serial number of unsent/unreceived messages
+
+@var{msg}:  the message to analyze
+
+Analyzes a MISS message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
