Miss lists now generated (but not used).

--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -208,3 +208,15 @@ Returns all the messages that were not sent for the given warehouse.
 @strong{Return value:}  a list of strings, containing atoms.
 @end deftypefun
 
+@deftypefun {lw6sys_list_t *} {lw6dat_warehouse_get_miss_list} (lw6dat_warehouse_t * @var{warehouse})
+@var{warehouse}:  object to query
+
+Returns a list of @code{lw6dat_miss_t} objects which contains informations about
+the messages which need to be re-sent by peers. Once the function has been
+called, the list is cleared, so another call will return an empty list.
+Note that @code{lw6dat_warehouse_get_msg_list_by_seq} must be called before ofor this
+function to work, else the list of messages is not correctly updated.
+
+@strong{Return value:}  a list of pointers to @code{lw6dat_miss_t} structs, NULL on failure.
+@end deftypefun
+
