--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-10 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Miss lists now generated (but not used).
+
 2012-05-08 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added MISS command generation/analyze.
