--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-20 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Yet another MISS fix.
+
 2012-05-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed miss message generation.
