--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-22 : Christian Mauduit <ufoot@ufoot.org>
+
+	* FOO and BAR message now send latest serial, helps generating MISS.
+
 2012-05-20 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Yet another MISS fix.
