--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -242,3 +242,14 @@ someone else might have them.
 @strong{Return value:}  none
 @end deftypefun
 
+@deftypefun {void} {lw6dat_warehouse_update_serial_miss_max} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{remote_id}, int @var{serial})
+@var{warehouse}:  object to update
+
+@var{remote_id}:  id of remote host to update (which stack)
+
+@var{serial}:  new max serial value
+
+
+@strong{Return value:}  none
+@end deftypefun
+
