--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -16,20 +16,24 @@ Generate a TICKET command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {char *} {lw6msg_cmd_generate_foo} (lw6nod_info_t * @var{info}, u_int32_t @var{key})
+@deftypefun {char *} {lw6msg_cmd_generate_foo} (lw6nod_info_t * @var{info}, u_int32_t @var{key}, int @var{serial})
 @var{info}:  the node info to use
 
 @var{key}:  the key to identify the message
+
+@var{serial}:  serial number of latest data message
 
 Generate a FOO command.
 
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {char *} {lw6msg_cmd_generate_bar} (lw6nod_info_t * @var{info}, u_int32_t @var{key})
+@deftypefun {char *} {lw6msg_cmd_generate_bar} (lw6nod_info_t * @var{info}, u_int32_t @var{key}, int @var{serial})
 @var{info}:  the node info to use
 
 @var{key}:  the key to identify the message
+
+@var{serial}:  serial number of latest data message
 
 Generate a BAR command.
 
@@ -119,10 +123,12 @@ Analyzes a TICKET message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_foo} (lw6nod_info_t ** @var{info}, u_int32_t * @var{key}, const char * @var{msg})
+@deftypefun {int} {lw6msg_cmd_analyse_foo} (lw6nod_info_t ** @var{info}, u_int32_t * @var{key}, int * @var{serial}, const char * @var{msg})
 @var{info}:  will contain (remote) node info on success
 
 @var{key}:  if not NULL, will contain the foo/bar key on success
+
+@var{serial}:  if not NULL, will contain the latest serial number of peer
 
 @var{msg}:  the message to analyse
 
@@ -131,10 +137,12 @@ Analyzes a FOO message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_bar} (lw6nod_info_t ** @var{info}, u_int32_t * @var{key}, const char * @var{msg})
+@deftypefun {int} {lw6msg_cmd_analyse_bar} (lw6nod_info_t ** @var{info}, u_int32_t * @var{key}, int * @var{serial}, const char * @var{msg})
 @var{info}:  will contain (remote) node info on success
 
 @var{key}:  if not NULL, will contain the foo/bar key on success
+
+@var{serial}:  if not NULL, will contain the latest serial number of peer
 
 @var{msg}:  the message to analyse
 
