--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -3507,6 +3507,20 @@ Compares two shapes, but ignores the z (d) parameter.
 @strong{Return value:}  1 if same_xy, 0 if not.
 @end deftypefun
 
+@deftypefun {int} {lw6sys_shape_volume_whd} (const lw6sys_whd_t * @var{shape})
+
+Gives the volume (w * h * d) for a given shape.
+
+@strong{Return value:}  the volume.
+@end deftypefun
+
+@deftypefun {int} {lw6sys_shape_surface_wh} (const lw6sys_whd_t * @var{shape})
+
+Gives the surface (w * h) for a given shape.
+
+@strong{Return value:}  the surface.
+@end deftypefun
+
 @deftypefun {void} {lw6sys_signal_custom} (int @var{trap_errors})
 @var{trap_errors}:  set to 1 if you want to trap SIGSEGV and SIGFPE
 
