--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-27 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Preparing game_state serialization, added checks for map and game_struct.
+
 2012-05-26 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added game_struct serialization. Not bullet-proof yet.
