--- a/liquidwar6/doc/scm-gdoc.texi
+++ b/liquidwar6/doc/scm-gdoc.texi
@@ -6,7 +6,7 @@ Runs the @code{scm} module test suite.
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
-@deftypefun {int} {lw6scm_c_define_gsubr} (char * @var{name}, int @var{req}, int @var{opt}, int @var{rst}, lw6scm_func_t @var{fcn})
+@deftypefun {int} {lw6scm_c_define_gsubr} (const char * @var{name}, int @var{req}, int @var{opt}, int @var{rst}, lw6scm_func_t @var{fcn})
 @var{name}:  name of the function when called from guile
 
 @var{req}:  required parameters
@@ -25,7 +25,7 @@ is a very nice code-quality tool.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
-@deftypefun {int} {lw6scm_c_primitive_load} (char * @var{filename})
+@deftypefun {int} {lw6scm_c_primitive_load} (const char * @var{filename})
 @var{filename}:  file to execute
 
 Loads and executes a script. Will add a log message while doing it.
