--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-13 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Introducing pilot dump (to be implemented).
+
 2012-06-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed script tests.
