--- a/liquidwar6/doc/pil-gdoc.texi
+++ b/liquidwar6/doc/pil-gdoc.texi
@@ -45,6 +45,25 @@ the map but just to avoid overflow errors.
 @strong{Return value:}  none.
 @end deftypefun
 
+@deftypefun {char *} {lw6pil_dump_pilot_to_command} (lw6pil_pilot_t * @var{pilot}, int64_t @var{timestamp}, u_int64_t @var{server_id})
+@var{pilot}:  the pilot to transform as a DUMP.
+
+Creates the DUMP command for a given pilot, that is, a command that
+describes the whole data and state.
+
+@strong{Return value:}  newly allocated string
+@end deftypefun
+
+@deftypefun {int} {lw6pil_dump_command_to_pilot} (lw6pil_pilot_t * @var{pilot}, lw6pil_pilot_t ** @var{new_pilot}, lw6ker_game_state_t ** @var{new_game_state}, lw6ker_game_struct_t ** @var{new_game_struct}, lw6map_level_t ** @var{new_level})
+
+Interprets a DUMP command. A new pilot will be returned, along with game state, game struct and
+level. Old objects won't be deleted, but you could (should) get rid of them at they are useless now.
+
+describes the whole data and state.
+
+@strong{Return value:}  newly allocated string
+@end deftypefun
+
 @deftypefun {void} {lw6pil_local_cursors_reset} (lw6pil_local_cursors_t * @var{local_cursors})
 Resets a local cursors struct. Note that this need not be called very often,
 in fact the local cursors can cope with "dead" cursors easily. In practise,
