--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -357,6 +357,18 @@ it exists.
 @strong{Return value:}  newly allocated string containing public_url if OK, NULL on error.
 @end deftypefun
 
+@deftypefun {int} {lw6msg_sort_str_by_seq_callback} (lw6sys_list_t ** @var{list_a}, lw6sys_list_t ** @var{list_b})
+@var{list_a}:  pointer to a list of int item
+
+@var{list_b}:  pointer to a list of int item
+
+Sort callback for a list containing strings which begin by a seq number,
+will sort with lower seq number first.
+
+@strong{Return value:}  -1 if @code{list_a} < @code{list_b} , 0 if @code{list_a} == @code{list_b}, 
+1 if @code{list_a} > @code{list_b}
+@end deftypefun
+
 @deftypefun {int} {lw6msg_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
