--- a/liquidwar6/doc/scm-gdoc.texi
+++ b/liquidwar6/doc/scm-gdoc.texi
@@ -1,3 +1,70 @@
+@deftypefun {lw6sys_hash_t *} {lw6scm_coverage_new} (lw6sys_list_t * @var{funcs})
+@var{funcs}:  list of functions, used as an input to size the hash correctly
+
+Creates a new coverage hash, this is a simple hash containing pointers
+to integers. At startup hash is empty, whenever a scheme user function is
+called, if the entry exists it's incremented, else it's created with an
+initial value of 1 (one call).
+
+@strong{Return value:}  newly allocated hash
+@end deftypefun
+
+@deftypefun {void} {lw6scm_coverage_call} (lw6sys_hash_t * @var{coverage}, const char * @var{func})
+@var{coverage}:  the hash to use to store the update
+
+@var{func}:  the name of the function (its callable scheme name)
+
+
+Registers a call on a given function.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6scm_coverage_log} (lw6sys_hash_t * @var{coverage})
+@var{coverage}:  the hash containing the call data
+
+
+Logs the information about which function has been called, and how many times.
+This is only about scheme functions.
+
+@strong{Return value:}  none
+@end deftypefun
+
+@deftypefun {int} {lw6scm_coverage_check} (int * @var{percent}, lw6sys_hash_t * @var{coverage}, lw6sys_list_t * @var{funcs})
+@var{percent}:  if not NULL, will contain the percentage of coverage
+
+@var{coverage}:  object to query, containing coverage information
+
+@var{funcs}:  list of functions to check
+
+Checks wether the script code coverage is fine, that is, wether all functions
+are called at least once. For each function listed (as a string) in funcs, it will
+look in coverage and check wether the entry exists and was called. Note that this
+function assumes that in c functions are defined with _scm_my_function (prefixed
+with _scm_ and using underscore) while in scm functions are defined with c-my-function
+(prefixed with c- and using minus).
+
+@strong{Return value:}  1 if OK, 0 if KO.
+@end deftypefun
+
+@deftypefun {char *} {lw6scm_funcname_scm2c} (const char * @var{funcname})
+@var{funcname}:  function name to change
+
+Transforms a function name of the form c-my-func to
+_scm_my_func.
+
+@strong{Return value:}  new allocated string.
+@end deftypefun
+
+@deftypefun {char *} {lw6scm_funcname_c2scm} (const char * @var{funcname})
+@var{funcname}:  function name to change
+
+Transforms a function name of the form _scm_my_func to
+c-my-func.
+
+@strong{Return value:}  new allocated string.
+@end deftypefun
+
 @deftypefun {int} {lw6scm_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
